# vf2_firmware

./: .gitignore  Cargo.toml  Makefile  README.md  gen_img.sh  link.ld
.cargo/: config.toml
src/: entry.S  fat.rs  jump.S  lib.rs  logger.rs  main.rs  mem.rs  sd.rs  uart.rs
